charts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edu-flow-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /gateway
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8080
      - path: /mongo
        pathType: Prefix
        backend:
          service:
            name: mongo
            port:
              number: 27017
      - path: /kafka-ui
        pathType: Prefix
        backend:
          service:
            name: kafka-ui
            port:
              number: 80
